--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="icon" href="<%= BASE_URL %>css/xinjiang/index.css">
-    <title>datashow</title>
+    <title>紫电智能情报分析系统</title>
   </head>
   <body>
     <div id="app"></div>
