--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="icon" href="<%= BASE_URL %>css/xinjiang/index.css">
     <title>紫电智能情报分析系统</title>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=ZUONbpqGBsYGXNIYHicvbAbM"></script>
-    <!-- <script type="text/javascript" src="js/mapapi.js"></script> -->
+    <style type="text/css">
+      .anchorBL {
+          display: none;
+      }
+    </style>
+    <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=ZUONbpqGBsYGXNIYHicvbAbM"></script> -->
+    <script type="text/javascript" src="js/getscript.js"></script>
   </head>
   <body>
     <div id="app"></div>
