--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="icon" href="<%= BASE_URL %>css/xinjiang/index.css">
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
+    <link rel="icon" href="<%= BASE_URL %>css/xinjiang/index.css"/>
     <title>紫电智能情报分析系统</title>
     <style type="text/css">
       .anchorBL {
           display: none;
       }
     </style>
-    <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=ZUONbpqGBsYGXNIYHicvbAbM"></script> -->
-    <script type="text/javascript" src="js/getscript.js"></script>
+    <script type="text/javascript" src="js/getscript.js"> </script>
   </head>
   <body>
     <div id="app"></div>
