--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
           display: none;
       }
     </style>
-    <script type="text/javascript" src="js/getscript.js"> </script>
+    <script type="text/javascript" src="/js/getscript.js"> </script>
   </head>
   <body>
     <div id="app"></div>
