--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,15 @@
       }
       
     </style>  
+    <!-- <script src="https://img.hcharts.cn/jquery/jquery-1.8.3.min.js"></script> -->
+    <!-- <script src="https://img.hcharts.cn/highcharts/highcharts.js"></script> -->
+    
     <script type="text/javascript" src="<%= BASE_URL %>js/getscript.js"> </script>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <!-- <script src="https://img.hcharts.cn/highcharts/modules/exporting.js"></script> -->
+  <!-- <script src="http://cdn.hcharts.cn/highcharts/modules/exporting.js"></script> -->
 </html>
