--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,12 @@
       .anchorBL {
           display: none;
       }
-      body {
-        background-image: url("<%= BASE_URL %>xinjiang/img/background4.jpg");
+      #panel {
+        background-image: url("<%= BASE_URL %>xinjiang/img/background5.png");
       }
-      
+      .icon .sword{
+          background: url("<%= BASE_URL %>xinjiang/img/pnglet3.png") no-repeat ;
+      }
     </style>  
     <!-- <script src="https://img.hcharts.cn/jquery/jquery-1.8.3.min.js"></script> -->
     <!-- <script src="https://img.hcharts.cn/highcharts/highcharts.js"></script> -->
