--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"/> -->
     <!-- <link rel="icon" href="<%= BASE_URL %>css/xinjiang/index.css"/> -->
     <title>紫电智能情报分析系统</title>
     <style type="text/css">
@@ -18,15 +18,9 @@
           background: url("<%= BASE_URL %>xinjiang/img/pnglet3.png") no-repeat ;
       }
     </style>  
-    <!-- <script src="https://img.hcharts.cn/jquery/jquery-1.8.3.min.js"></script> -->
-    <!-- <script src="https://img.hcharts.cn/highcharts/highcharts.js"></script> -->
-    
     <script type="text/javascript" src="<%= BASE_URL %>js/getscript.js"> </script>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
-  <!-- <script src="https://img.hcharts.cn/highcharts/modules/exporting.js"></script> -->
-  <!-- <script src="http://cdn.hcharts.cn/highcharts/modules/exporting.js"></script> -->
 </html>
