自适应login页面

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,11 @@
       #panel {
         background-image: url("<%= BASE_URL %>xinjiang/img/background5.png");
       }
-      .icon .sword{
-          background: url("<%= BASE_URL %>xinjiang/img/pnglet3.png") no-repeat ;
+      .sword{
+          background: url("<%= BASE_URL %>xinjiang/img/pnglet4.png") no-repeat ;
+      }
+      .word {
+        background-image: url("<%= BASE_URL %>xinjiang/img/word.png");
       }
     </style>  
     <script type="text/javascript" src="<%= BASE_URL %>js/getscript.js"> </script>
