修改选择器过滤，以及自适应树型，以及timeline双series配置修改

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,23 @@
       .word {
         background-image: url("<%= BASE_URL %>xinjiang/img/word.png");
       }
+
+      @media only screen and (min-width:700px){
+          html{
+            font-size:10px !important;
+          }
+      }
+      @media only screen and (min-width:1024px){
+          html{
+            font-size:12px !important;
+          }
+      }
+      @media only screen and (min-width:1330px){
+          html{
+            font-size:14px !important;
+          }
+      }
+
     </style>  
     <script type="text/javascript" src="<%= BASE_URL %>js/getscript.js"> </script>
   </head>
