--- a/public/html/elecnum.html
+++ b/public/html/elecnum.html
@@ -209,7 +209,7 @@
 			{
 				var ydata = echarts.dataTool.prepareBoxplotData(boxList);
 				data = [{
-						name: "电流",
+						name: "电量",
 			           	data: ydata.boxData
 					},{
 						name: '异常值',
