分割index.html作为登录页面,home.html为主分析页

--- a/public/home.html
+++ b/public/home.html
@@ -14,12 +14,12 @@
       #panel {
         background-image: url("<%= BASE_URL %>xinjiang/img/background5.png");
       }
-      .sword{
+      /* .sword{
           background: url("<%= BASE_URL %>xinjiang/img/pnglet4.png") no-repeat ;
       }
       .word {
         background-image: url("<%= BASE_URL %>xinjiang/img/word.png");
-      }
+      } */
 
       @media only screen and (min-width:700px){
           html{
