--- a/public/login.html
+++ b/public/login.html
@@ -20,7 +20,9 @@
       .word {
         background-image: url("<%= BASE_URL %>xinjiang/img/word.png");
       }
-
+      body {
+        margin: 0px;
+      }
       @media only screen and (min-width:700px){
           html{
             font-size:10px !important;
@@ -37,8 +39,7 @@
           }
       }
 
-    </style>  
-    <script type="text/javascript" src="<%= BASE_URL %>js/getscript.js"> </script>
+    </style>
   </head>
   <body>
     <div id="app"></div>
